[package]
name = "containers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "./dummy.rs"
name = "dummy"

[[bin]]
path = "./src/main.rs"
name = "echo-server"

[dependencies]
actix-web = "4.2"
tokio = { version = "1.22", features = ["full"] }
